# MIXING-COPILOT

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Packaging/: AAX_README.txt
Packaging/Windows/: MIXING_COPILOT_Windows_InnoSetup.iss  README_Windows_Packaging.txt
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
cmake/toolchains/: llvm-mingw-x86_64.cmake
